--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ main .note1{
 </header>
 <section>
 <div class="pic">
-<img src="images/pic1.jpg" alt="picture" width="400px" height="250px" class="pic1" >    
-<img src="images/pic2.jpg" alt="picture" width="600px" height="500px" class="pic2" >
+<img src="./images/pic1.jpg" alt="picture" width="400px" height="250px" class="pic1" >    
+<img src="./images/pic2.jpg" alt="picture" width="600px" height="500px" class="pic2" >
 <div class="branding">
 <h1>
 "A Creative
@@ -186,7 +186,7 @@ main .note1{
 			</main>
 			<section id="details">
 			<div class="pic3">
-			<img src="images/pic3.jpg" alt="pic" height="500px" width="300px">
+			<img src="./images/pic3.jpg" alt="pic" height="500px" width="300px">
 			<div class="right-align>
 			<p class="details">
 			<br>
